Fix show nav spacing; Add screenshots to public

--- a/bandsite-sprint-3/Styles/Media-Queries/_show_mobile-view.scss
+++ b/bandsite-sprint-3/Styles/Media-Queries/_show_mobile-view.scss
@@ -1,12 +1,11 @@
 @media (max-width: 600px) {
-
   .navbar {
     flex-flow: column nowrap;
 
     .navbar__logo {
       margin-top: 5%;
     }
-  
+
     .navbar__nav {
       display: flex;
       flex-flow: row nowrap;
@@ -14,16 +13,16 @@
       align-items: space-around;
       width: 100%;
       margin-left: 0%;
-  
+
       .nav-link {
-        font-size: .8rem;
-        margin: -3% 0% 0% 0;
-        padding: 0% 22% 5% 23%;
+        font-size: 0.8rem;
+        margin: -2% 2% -2% 0;
+        padding: 0% 23% 1% 22%;
 
         p {
           margin: 0;
         }
-      }  
+      }
     }
   }
 
@@ -35,28 +34,28 @@
 
       .hero__hero-image--overlay {
         height: 70vh;
-    
+
         #hero__h2 {
           font-size: 3rem;
           margin-left: 2%;
           margin-top: 0%;
           padding: 0;
         }
-  
+
         #hero__h4 {
-          font-size: .9rem;
+          font-size: 0.9rem;
           padding: 0;
           color: $white;
           margin: 40% 0 0 3%;
         }
-  
+
         iframe {
           position: relative;
-          bottom: 60%; 
+          bottom: 60%;
           left: 3%;
           right: 0;
           align-self: flex-start;
-          width: 70vw; 
+          width: 70vw;
           margin: 0 0 0 0;
           // margin-bottom: 300px;
         }
@@ -68,18 +67,18 @@
     width: 85%;
     display: flex;
     flex-flow: column nowrap;
-  
+
     h2 {
       font-size: 2rem;
       margin-left: 5%;
     }
-  
+
     .tourdates__table {
       display: flex;
       flex-flow: column nowrap;
       width: 50%;
       margin: 2% 2%;
-  
+
       table {
         align-self: center;
         width: 90%;
@@ -90,7 +89,7 @@
           box-shadow: 0 2px 0 $alabaster;
           margin: 10% 0%;
 
-          &:nth-of-type(1){
+          &:nth-of-type(1) {
             box-shadow: none;
             display: none;
           }
@@ -104,7 +103,7 @@
           .desktop-header {
             display: none;
             color: $mercury;
-            font-size: .8rem;
+            font-size: 0.8rem;
             padding-right: 22%;
           }
 
@@ -114,8 +113,9 @@
             // padding-right: 10%;
           }
 
-          & > td:nth-child(2), td:nth-child(3) {
-            font-size: .8rem;
+          & > td:nth-child(2),
+          td:nth-child(3) {
+            font-size: 0.8rem;
           }
 
           .mobile-header {
@@ -126,7 +126,7 @@
             background: $black;
             color: $white;
             font-weight: bold;
-            font-size: .8rem;
+            font-size: 0.8rem;
             margin: 0 0 5% 0;
             padding: 10px 55px;
             border-radius: 4px;
@@ -134,18 +134,17 @@
           }
         }
       }
-    } 
+    }
   }
-
 }
 
 @media (max-width: 470px) {
-  
   .navbar {
     .navbar__nav {
       .nav-link {
-        margin: 0 0 5% 0%;
-        padding: 0% 17% 5% 18%;
+        font-size: 0.8rem;
+        margin: -2% 5% 5% 0;
+        padding: 0% 18% 2% 15%;
       }
     }
   }
@@ -158,28 +157,28 @@
 
       .hero__hero-image--overlay {
         height: 70vh;
-    
+
         #hero__h2 {
           font-size: 3rem;
           margin-left: 2%;
           margin-top: 0%;
           padding: 0;
         }
-  
+
         #hero__h4 {
-          font-size: .9rem;
+          font-size: 0.9rem;
           padding: 0;
           color: $white;
           margin: 40% 0 0 3%;
         }
-  
+
         iframe {
           position: relative;
-          bottom: 40%; 
+          bottom: 40%;
           left: 3%;
           right: 0;
           align-self: flex-start;
-          width: 70vw; 
+          width: 70vw;
           margin: 0 0 0 0;
           // margin-bottom: 300px;
         }
@@ -191,29 +190,29 @@
     width: 85%;
     display: flex;
     flex-flow: column nowrap;
-  
+
     h2 {
       font-size: 2rem;
       margin-left: 7%;
     }
-  
+
     .tourdates__table {
       display: flex;
       flex-flow: column nowrap;
       width: 50%;
       margin: 2% 2%;
-  
+
       table {
         align-self: center;
         width: 90%;
-  
+
         tr {
           display: block;
           width: 100%;
           box-shadow: 0 2px 0 $alabaster;
           margin: 10% 0%;
 
-          &:nth-of-type(1){
+          &:nth-of-type(1) {
             box-shadow: none;
           }
 
@@ -226,7 +225,7 @@
           .desktop-header {
             display: none;
             color: $mercury;
-            font-size: .8rem;
+            font-size: 0.8rem;
             padding-right: 22%;
           }
 
@@ -236,8 +235,9 @@
             // padding-right: 10%;
           }
 
-          & > td:nth-child(2), td:nth-child(3) {
-            font-size: .8rem;
+          & > td:nth-child(2),
+          td:nth-child(3) {
+            font-size: 0.8rem;
           }
 
           .mobile-header {
@@ -248,7 +248,7 @@
             background: $black;
             color: $white;
             font-weight: bold;
-            font-size: .8rem;
+            font-size: 0.8rem;
             margin: 0 0 5% 0;
             padding: 10px 55px;
             border-radius: 4px;
@@ -256,18 +256,17 @@
           }
         }
       }
-    } 
+    }
   }
-
 }
 
 @media (max-width: 320px) {
-
   .navbar {
     .navbar__nav {
       .nav-link {
-        margin: 0 0 5% 0%;
-        padding: 0% 17% 9% 18%;
+        font-size: 0.8rem;
+        margin: 0 5% 5% 0;
+        padding: 0% 15% 4% 20%;
       }
     }
   }
@@ -280,28 +279,28 @@
 
       .hero__hero-image--overlay {
         height: 70vh;
-    
+
         #hero__h2 {
           font-size: 2rem;
           margin: 0 0 0 4%;
           padding: 0;
         }
-  
+
         #hero__h4 {
-          font-size: .9rem;
+          font-size: 0.9rem;
           padding: 0;
           color: $white;
           margin: 0 0 2% 4%;
         }
-  
+
         iframe {
           position: relative;
-          bottom: 5%; 
+          bottom: 5%;
           left: 4%;
           top: 10%;
           right: 0;
           align-self: flex-start;
-          width: 90vw; 
+          width: 90vw;
           margin: 0 0 0 0;
         }
       }
@@ -312,30 +311,30 @@
     width: 85%;
     display: flex;
     flex-flow: column nowrap;
-  
+
     h2 {
       font-size: 2rem;
       margin-left: 7%;
       margin-bottom: 0;
     }
-  
+
     .tourdates__table {
       display: flex;
       flex-flow: column nowrap;
       width: 50%;
       margin: 2% 2%;
-  
+
       table {
         align-self: center;
         width: 90%;
-  
+
         tr {
           display: block;
           width: 100%;
           box-shadow: 0 2px 0 $alabaster;
           margin: 10% 0%;
 
-          &:nth-of-type(1){
+          &:nth-of-type(1) {
             box-shadow: none;
             margin: 0;
           }
@@ -349,13 +348,13 @@
           .desktop-header {
             display: none;
             color: $mercury;
-            font-size: .8rem;
+            font-size: 0.8rem;
             padding-right: 22%;
           }
 
-
-          & > td:nth-child(2), td:nth-child(2) {
-            font-size: .8rem;
+          & > td:nth-child(2),
+          td:nth-child(2) {
+            font-size: 0.8rem;
           }
 
           .mobile-header {
@@ -366,7 +365,7 @@
             background: $black;
             color: $white;
             font-weight: bold;
-            font-size: .8rem;
+            font-size: 0.8rem;
             margin: 0 0 5% 0;
             padding: 10px 55px;
             border-radius: 4px;
@@ -374,7 +373,6 @@
           }
         }
       }
-    } 
+    }
   }
-
 }
