--- a/bandsite-sprint-3/Styles/shows.css
+++ b/bandsite-sprint-3/Styles/shows.css
@@ -1385,9 +1385,9 @@ body {
     margin-left: 0%;
   }
   .navbar .navbar__nav .nav-link {
-    font-size: .8rem;
-    margin: -3% 0% 0% 0;
-    padding: 0% 22% 5% 23%;
+    font-size: 0.8rem;
+    margin: -2% 2% -2% 0;
+    padding: 0% 23% 1% 22%;
   }
   .navbar .navbar__nav .nav-link p {
     margin: 0;
@@ -1408,7 +1408,7 @@ body {
     padding: 0;
   }
   .hero .hero__hero-image .hero__hero-image--overlay #hero__h4 {
-    font-size: .9rem;
+    font-size: 0.9rem;
     padding: 0;
     color: #FFFFFF;
     margin: 40% 0 0 3%;
@@ -1474,15 +1474,16 @@ body {
   .tourdates .tourdates__table table tr .desktop-header {
     display: none;
     color: #E1E1E1;
-    font-size: .8rem;
+    font-size: 0.8rem;
     padding-right: 22%;
   }
   .tourdates .tourdates__table table tr > td:nth-child(1) {
     display: none;
     font-weight: bold;
   }
-  .tourdates .tourdates__table table tr > td:nth-child(2), .tourdates .tourdates__table table tr td:nth-child(3) {
-    font-size: .8rem;
+  .tourdates .tourdates__table table tr > td:nth-child(2),
+  .tourdates .tourdates__table table tr td:nth-child(3) {
+    font-size: 0.8rem;
   }
   .tourdates .tourdates__table table tr .mobile-header {
     display: inline-block;
@@ -1491,7 +1492,7 @@ body {
     background: #323232;
     color: #FFFFFF;
     font-weight: bold;
-    font-size: .8rem;
+    font-size: 0.8rem;
     margin: 0 0 5% 0;
     padding: 10px 55px;
     border-radius: 4px;
@@ -1501,8 +1502,9 @@ body {
 
 @media (max-width: 470px) {
   .navbar .navbar__nav .nav-link {
-    margin: 0 0 5% 0%;
-    padding: 0% 17% 5% 18%;
+    font-size: 0.8rem;
+    margin: -2% 5% 5% 0;
+    padding: 0% 18% 2% 15%;
   }
   .hero {
     width: 100vw;
@@ -1520,7 +1522,7 @@ body {
     padding: 0;
   }
   .hero .hero__hero-image .hero__hero-image--overlay #hero__h4 {
-    font-size: .9rem;
+    font-size: 0.9rem;
     padding: 0;
     color: #FFFFFF;
     margin: 40% 0 0 3%;
@@ -1585,15 +1587,16 @@ body {
   .tourdates .tourdates__table table tr .desktop-header {
     display: none;
     color: #E1E1E1;
-    font-size: .8rem;
+    font-size: 0.8rem;
     padding-right: 22%;
   }
   .tourdates .tourdates__table table tr > td:nth-child(1) {
     display: none;
     font-weight: bold;
   }
-  .tourdates .tourdates__table table tr > td:nth-child(2), .tourdates .tourdates__table table tr td:nth-child(3) {
-    font-size: .8rem;
+  .tourdates .tourdates__table table tr > td:nth-child(2),
+  .tourdates .tourdates__table table tr td:nth-child(3) {
+    font-size: 0.8rem;
   }
   .tourdates .tourdates__table table tr .mobile-header {
     display: inline-block;
@@ -1602,7 +1605,7 @@ body {
     background: #323232;
     color: #FFFFFF;
     font-weight: bold;
-    font-size: .8rem;
+    font-size: 0.8rem;
     margin: 0 0 5% 0;
     padding: 10px 55px;
     border-radius: 4px;
@@ -1612,8 +1615,9 @@ body {
 
 @media (max-width: 320px) {
   .navbar .navbar__nav .nav-link {
-    margin: 0 0 5% 0%;
-    padding: 0% 17% 9% 18%;
+    font-size: 0.8rem;
+    margin: 0 5% 5% 0;
+    padding: 0% 15% 4% 20%;
   }
   .hero {
     width: 100vw;
@@ -1630,7 +1634,7 @@ body {
     padding: 0;
   }
   .hero .hero__hero-image .hero__hero-image--overlay #hero__h4 {
-    font-size: .9rem;
+    font-size: 0.9rem;
     padding: 0;
     color: #FFFFFF;
     margin: 0 0 2% 4%;
@@ -1698,11 +1702,12 @@ body {
   .tourdates .tourdates__table table tr .desktop-header {
     display: none;
     color: #E1E1E1;
-    font-size: .8rem;
+    font-size: 0.8rem;
     padding-right: 22%;
   }
-  .tourdates .tourdates__table table tr > td:nth-child(2), .tourdates .tourdates__table table tr td:nth-child(2) {
-    font-size: .8rem;
+  .tourdates .tourdates__table table tr > td:nth-child(2),
+  .tourdates .tourdates__table table tr td:nth-child(2) {
+    font-size: 0.8rem;
   }
   .tourdates .tourdates__table table tr .mobile-header {
     display: inline-block;
@@ -1711,7 +1716,7 @@ body {
     background: #323232;
     color: #FFFFFF;
     font-weight: bold;
-    font-size: .8rem;
+    font-size: 0.8rem;
     margin: 0 0 5% 0;
     padding: 10px 55px;
     border-radius: 4px;
